--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "glob": "^8.0.3",
+    "gray-matter": "^4.0.3",
     "next": "12.3.1",
+    "next-mdx-remote": "^4.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
+    "reading-time": "^1.5.0",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@types/glob": "^8.0.0",
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
