--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "@types/glob": "^8.0.0",
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
