--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "next": "12.3.1",
     "next-mdx-remote": "^4.1.0",
@@ -17,6 +16,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
     "reading-time": "^1.5.0",
+    "rehype-highlight": "^6.0.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.1"
@@ -27,9 +27,11 @@
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/remark-prism": "^1.3.3",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "glob": "^8.0.3",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
