--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
+    "@vercel/og": "^0.0.20",
     "gray-matter": "^4.0.3",
     "next": "12.3.1",
     "next-mdx-remote": "^4.1.0",
