--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "url": "https://forestlee0513.github.io"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "cross-env NEXT_PUBLIC_IS_PRODUCTION=false NEXT_PUBLIC_EXPORT_TYPE=SSR next dev",
+    "build": "cross-env NEXT_PUBLIC_IS_PRODUCTION=true NEXT_PUBLIC_EXPORT_TYPE=SSR next build",
     "start": "next start",
     "lint": "next lint",
-    "static": "next build && next export && touch ./out/.nojekyll && echo $npm_package_config_url > ./out/CNAME"
+    "static": "cross-env NEXT_PUBLIC_IS_PRODUCTION=true NEXT_PUBLIC_EXPORT_TYPE=SSG next build && next export && touch ./out/.nojekyll && echo $npm_package_config_url > ./out/CNAME"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -39,6 +39,7 @@
     "@types/react-dom": "18.0.6",
     "@types/remark-prism": "^1.3.3",
     "autoprefixer": "^10.4.12",
+    "cross-env": "^7.0.3",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "glob": "^8.0.3",
