--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "config": {
     "url": "https://forestlee-nextjs-blog-demo.netlify.app"
   },
+  "type": "module",
   "scripts": {
-    "dev": "cross-env NEXT_PUBLIC_IS_PRODUCTION=false NEXT_PUBLIC_EXPORT_TYPE=SSR next dev",
-    "build": "cross-env NEXT_PUBLIC_IS_PRODUCTION=true NEXT_PUBLIC_EXPORT_TYPE=SSR next build",
+    "filegen:routes": "node --experimental-specifier-resolution=node --loader ts-node/esm ./scripts/routes.ts",
+    "dev": "yarn filegen:routes && cross-env NEXT_PUBLIC_IS_PRODUCTION=false NEXT_PUBLIC_EXPORT_TYPE=SSR next dev",
+    "build": "yarn filegen:routes && cross-env NEXT_PUBLIC_IS_PRODUCTION=true NEXT_PUBLIC_EXPORT_TYPE=SSR next build",
     "start": "next start",
     "lint": "next lint",
-    "static": "cross-env NEXT_PUBLIC_IS_PRODUCTION=true NEXT_PUBLIC_EXPORT_TYPE=SSG next build && next export && touch ./out/.nojekyll && echo $npm_package_config_url > ./out/CNAME"
+    "static": "yarn filegen:routes && cross-env NEXT_PUBLIC_IS_PRODUCTION=true NEXT_PUBLIC_EXPORT_TYPE=SSG next build && next export && touch ./out/.nojekyll && echo $npm_package_config_url > ./out/CNAME"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -42,9 +44,11 @@
     "cross-env": "^7.0.3",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "fp-ts": "^2.13.1",
     "glob": "^8.0.3",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.3"
   }
 }
